<resources>
    <string name="app_name">MaskEyes</string>


    <!-- ErrorCode.java -->
    <string name="ERROR401" translatable="false">잘못된 클라이언트 ID를 지정함.\n잘못된 클라이언트 유형을 사용함.\n콘솔에서 앱 패키지 이름을 잘못 등록함.</string>
    <string name="ERROR429" translatable="false">콘솔에서 Maps 서비스를 선택하지 않음.\n사용한도 초과됨.</string>
    <string name="ERROR800" translatable="false">클라이언트 ID를 지정하지 않음.</string>

    <!-- activity_mail.xml -->
    <string name="LATITUDE_TEXT" translatable="false">위도: </string>
    <string name="LONGITUDE_TEXT" translatable="false">경도: </string>
    <string name="LATITUDE_EDIT_HINT" translatable="false">위도입력</string>
    <string name="LONGITUDE_EDIT_HINT" translatable="false">경도입력</string>
    <string name="SEARCH">Search</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-6930055600634279/4270056262</string>
    <string name="banner_ad_unit_id_test" translatable="false">	ca-app-pub-3940256099942544/6300978111</string>


    <string name="address">Address</string>

    <string name="empty">Empty</string>
    <string name="unknown">Unknown</string>

    <string name="non_purchaser">Non-purchaser</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thur">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>

    <string name="last_format_target"></string>

    <string name="distance_format">Distance : %s</string>
    <string name="stock_at_format">Arrival time : %s</string>

    <string name="mask_stat_format">Mask : %s</string>

    <string name="stock_at">Arrival time :</string>

    <string name="mask_stat">Mask :</string>

    <string name="regulation_people_born_format">Born in a year ending with either %s or %s</string>

    <string name="copied_to_clipboard">Copied to clipboard</string>
    
    <string name="regulation">Notice</string>
    <string name="search_address">Search Address</string>
    <string name="smart_widget">Smart Widget</string>

    <string name="Priority">Widget Priority</string>

    <string name="priority_case1">In stock and near order</string>
    <string name="priority_case2">In stock and near order (Unknown is the same to be in stock) </string>
    <string name="priority_case3">Near order</string>

    <string name="list_view">Store List</string>
    <string name="smart_widget_des">The priority of the store is to stock public face masks and the closest to your location.</string>
    <string name="settings">Settings</string>
    <string name="search_here">Search here</string>
    <string name="contact">Contact</string>
    <string name="help">Help</string>
    <string name="navermap">Naver Map</string>
    <string name="kakaomap">Kakao Map</string>
    <string name="googlemap">Google Map</string>
    <string name="hide_empty">Hide empty</string>
    <string name="input_address">Address(Korean)</string>
    <string name="not_found_any_store">Not found\nany stores.</string>
    <string name="confirm">Confirm</string>
    <string name="loading">Loading..</string>
    <string name="marker_helper">About Marker</string>
    <string name="more_press_back">Press back one more time to exit.</string>
    <string name="contact_title">[MaskEyes] Contact</string>

    <string name="range_of_radius">Range of radius</string>
</resources>
